# pydoll-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  PROMPT_DEVELOPER_FIX_09.md  PROMPT_DEVELOPER_FIX_10.md  PROMPT_DEVELOPER_FIX_11.md  PROMPT_DEVELOPER_FIX_12.md  PROMPT_DEVELOPER_FIX_13.md  PROMPT_DEVELOPER_P2.md  PROMPT_DEVELOPER_REMEDIATION.md  PROMPT_DEVELOPER_SECOND_REMEDIATION.md  QUESTIONS.md  README.md  _lsp_test.py  pyproject.toml  start-server.bat
.opencode/: opencode.jsonc  openpets.md
docs/: agent-recipes.md  development.md  evaluation-2026-06-12-fix08-review.md  evaluation-2026-06-12-fix09-review.md  evaluation-2026-06-12-fix10-review.md  evaluation-2026-06-12-fix11-review.md  evaluation-2026-06-12-fix12-review.md  evaluation-2026-06-12-p2-review.md  evaluation-2026-06-12-remediation-review.md  evaluation-2026-06-12.md  pydoll-capabilities.md  release-checklist.md  security.md
docs/clients/: claude-code.md  codex.md  opencode.md
plans/: PLAN_01.md  PLAN_02.md  PLAN_03.md  PLAN_04.md  PLAN_05.md  PLAN_06.md  PLAN_07.md  PLAN_08.md  PLAN_09.md  PLAN_10.md  PLAN_11.md  PLAN_12.md  PLAN_13_AGENT_FRONTEND_ROBUSTNESS.md  PLAN_14_AGENT_FORM_FLOW_V2.md  PLAN_14_AGENT_FORM_FLOW_V2_API_CONTRACTS.md  PLAN_14_AGENT_FORM_FLOW_V2_TESTS.md  PLAN_15_RELEASE_0_4_0B1.md  PLAN_15_RELEASE_0_4_0B1_API_STABILIZATION.md  PLAN_15_RELEASE_0_4_0B1_TEST_RELEASE_GATES.md  PLAN_16_USER_AUTHENTICATED_PROFILES.md  PLAN_P1.md  PLAN_P2.md
plans/p2/: PLAN_P2_01_API_CONTRACT.md  PLAN_P2_02_STDIO_CLIENTS.md  PLAN_P2_03_NETWORK_CONSOLE.md  PLAN_P2_04_DIAGNOSTICS_TRACE.md  PLAN_P2_05_MULTI_CLIENT_ATTACH.md  PLAN_P2_06_RELEASE_DOCS.md
plans/remediation/: FIX_01_TRANSPORT_AND_AUTH.md  FIX_02_PYDOLL_API_COMPAT.md  FIX_03_ACTIONABLE_ELEMENT_IDS.md  FIX_04_DEEP_TRAVERSAL.md  FIX_05_CONCURRENCY_PROFILES.md  FIX_06_SECURITY_AND_ARTIFACTS.md  FIX_07_TEST_QUALITY_GATES.md  FIX_08_SECOND_PASS_VALIDATION.md  FIX_09_RUNTIME_FUNCTIONAL_GAPS.md  FIX_10_LOCKS_AND_ELEMENT_SCREENSHOT.md  FIX_11_PATH_TRAVERSAL_AND_COOKIE_LOCK.md  FIX_13_POST_FIX12_ACCEPTANCE.md  PLAN_FIX_12_P2_COMPLETION.md  README.md
progress/: 2026-06-12_AGENT_FIX_08.md  2026-06-12_AGENT_FIX_09.md  2026-06-12_AGENT_FIX_10.md  2026-06-12_AGENT_FIX_11.md  2026-06-12_AGENT_FIX_12.md  2026-06-12_AGENT_FIX_13.md  2026-06-12_AGENT_PLAN_01_12.md  2026-06-12_AGENT_PLAN_P1.md  2026-06-12_AGENT_PLAN_P2.md  2026-06-12_CHATGPT_EVALUATION_P1_P2.md  2026-06-12_CHATGPT_FIX08_REVIEW.md  2026-06-12_CHATGPT_FIX09_REVIEW.md  2026-06-12_CHATGPT_FIX10_REVIEW.md  2026-06-12_CHATGPT_FIX11_REVIEW.md  2026-06-12_CHATGPT_FIX12_REVIEW.md  2026-06-12_CHATGPT_INITIAL_ARTIFACTS.md  2026-06-12_CHATGPT_P2_REVIEW.md  2026-06-12_CHATGPT_REMEDIATION_PLANS.md  2026-06-12_CHATGPT_SECOND_REMEDIATION_REVIEW.md  README.md
references/pydoll-docs/: SOURCE.md
references/pydoll-docs/en/: index.md
references/pydoll-docs/pt/: index.md
references/pydoll-docs/zh/: index.md
src/pydoll_mcp_server/: __init__.py  auth.py  cli.py  config.py  errors.py  json_types.py  logging.py  server.py  server_state.py  tool_catalog.py  version.py
src/pydoll_mcp_server/browser/: cdp_helpers.py  http_client.py  inspection.py  locks.py  models.py  operations.py  profile_index.py  profiles.py  pydoll_compat.py  registry.py  script_utils.py  snapshots.py  watches.py
src/pydoll_mcp_server/diagnostics/: trace.py
src/pydoll_mcp_server/dom/: deep_helpers.py  deep_scripts.py  deep_traversal.py  element_cache.py  models.py  tree.py
src/pydoll_mcp_server/recovery/: health.py
src/pydoll_mcp_server/tools/: browser.py  (+34 more)
tests/: conftest.py  typing_helpers.py
tests/contract/: test_mcp_contract.py
tests/e2e/: test_stdio_browser_workflow.py
tests/integration/: test_advanced_browser_smoke.py  test_browser_smoke.py  test_choice_controls_smoke.py  test_deep_browser_smoke.py  test_element_resolution.py  test_imports.py  test_modern_frontend_smoke.py  test_plan14_smoke.py
tests/p2/: test_network.py  test_p2_features.py  test_trace.py
tests/unit/: test_active_surface_groups.py  test_advanced_features.py  test_architecture.py  test_auth.py  test_cdp_helpers.py  test_choice_interactions.py  test_concurrency.py  test_concurrency_lifecycle.py  test_config.py  test_element_cache.py  test_element_screenshot_security.py  test_errors.py  test_files_security.py  test_frontend_robustness.py  test_http_request.py  test_javascript.py  test_network_request_capture.py  test_page_file_url.py  test_path_traversal.py  test_plan14_agent_form_flow.py  test_plan14_enhanced_contracts.py  test_plan16_profiles.py  test_proxy.py  test_registry.py  test_runtime_boundaries.py  test_security.py  test_select_options.py  test_upload_prep.py  test_version_consistency.py  test_websocket_capture.py
(+269 files in other folders)
